fix(mobile/header): Resolve sticky header style issues on mobile
- Address styling inconsistencies with the sticky header on mobile screens

Changes summary:
- Resolved styling issues with the sticky header on mobile screens, ensuring a consistent and visually appealing design across devices.

--- a/src/sass/elements/_right--sticky.scss
+++ b/src/sass/elements/_right--sticky.scss
@@ -3,8 +3,11 @@
 But adding this "main" blocked this style to smaller screens so I have to add it down, out of this block,
 
  - .h-full.overflow-y-auto:has(.sticky [href^='/auth/login?next=/gpts']) is for Guest mode on GPTs Store
- - .sticky.border-token-border-medium je za small devices*/
-.sticky.border-token-border-medium,
+ - .sticky.border-token-border-medium je za small devices
+ - .sticky.bg-token-main-surface-primary je za small devices
+ */
+// .sticky.border-token-border-medium,
+.sticky.bg-token-main-surface-primary,
 main .sticky,
 .h-full.overflow-y-auto:has(.sticky [href^='/auth/login?next=/gpts']) .sticky {
 	background-color: var(--c-bg-chats-sticky) !important;
@@ -17,6 +20,7 @@ main .sticky,
 		--c-bg-chats-sticky: var(--c-bg-chats-container) !important;
 		--blur-sticky: 0 !important;
 	}
+
 	&.top-14 {
 		padding-bottom: 0.6rem !important;
 	}
